[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/Normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/GrimoryViewer.gd" type="Script" id=2]
[ext_resource path="res://Themes/Dark.theme" type="Theme" id=3]
[ext_resource path="res://Assets/Icons/ReturnIcon.png" type="Texture" id=4]
[ext_resource path="res://Assets/SelectableIcons/50x50/big-egg_50X50.png" type="Texture" id=5]

[sub_resource type="GDScript" id=5]
script/source = "extends TextureRect

var iconPath = \"res://Assets/SelectableIcons/50x50/big-egg_50X50.png\"

func _process(delta):
	var icon = load(iconPath)
	texture = icon
"

[sub_resource type="GDScript" id=1]
script/source = "extends AcceptDialog

var selected_index = \"\"
"

[sub_resource type="GDScript" id=2]
script/source = "extends AcceptDialog

var selected_index = \"\"
"

[sub_resource type="InputEventAction" id=3]
action = "ui_esc"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="GrimoryViewer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -505.0
margin_top = -291.0
margin_right = 371.0
margin_bottom = 291.0
rect_min_size = Vector2( 750, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 750.0
margin_bottom = 34.0
rect_min_size = Vector2( 750, 0 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 98.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 33.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "Icon"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 33.0
margin_bottom = 34.0

[node name="VSeparator" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 122.0
margin_bottom = 34.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 178.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_right = 36.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "INDEX"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 34.0

[node name="VSeparator2" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 202.0
margin_bottom = 34.0

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 222.0
margin_right = 258.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer4"]
margin_right = 36.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "NAME"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer4"]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 34.0

[node name="VSeparator3" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 278.0
margin_right = 282.0
margin_bottom = 34.0

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 400.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer3"]
margin_right = 98.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "REQUIREMENTS"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer3"]
margin_top = 34.0
margin_right = 98.0
margin_bottom = 34.0

[node name="VSeparator4" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 420.0
margin_right = 424.0
margin_bottom = 34.0

[node name="VBoxContainer5" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 444.0
margin_right = 491.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer5"]
margin_right = 47.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "ABILITY"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer5"]
margin_top = 34.0
margin_right = 47.0
margin_bottom = 34.0

[node name="VSeparator5" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 511.0
margin_right = 515.0
margin_bottom = 34.0

[node name="VBoxContainer6" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 535.0
margin_right = 573.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer6"]
margin_right = 38.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "COST"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer6"]
margin_top = 34.0
margin_right = 38.0
margin_bottom = 34.0

[node name="VSeparator6" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 593.0
margin_right = 597.0
margin_bottom = 34.0

[node name="VBoxContainer7" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 617.0
margin_right = 684.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer7"]
margin_right = 67.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "MIN_LEVEL"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer7"]
margin_top = 34.0
margin_right = 67.0
margin_bottom = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -300.0
margin_right = -24.0
margin_bottom = 300.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 100.0
margin_bottom = 232.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "ADD"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 236.0
margin_right = 100.0
margin_bottom = 276.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "REMOVE"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 100.0
margin_bottom = 320.0
text = "EDIT"

[node name="Button5" type="Button" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 100.0
margin_bottom = 364.0
shortcut_in_tooltip = false
text = "USE"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 368.0
margin_right = 100.0
margin_bottom = 408.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "LOAD"

[node name="FileDialog" type="FileDialog" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
window_title = "Open a File"
dialog_text = "Selecione o perfil que voce deseja caregar"
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -215.5
margin_right = 114.0
margin_bottom = 215.5
theme = ExtResource( 3 )
window_title = "Add Abiliity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AcceptDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -207.5
margin_right = 106.0
margin_bottom = 175.5
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog/ScrollContainer"]
margin_right = 200.0
margin_bottom = 574.0

[node name="Label" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "icon"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 184.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="AcceptDialog/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 13.0
margin_right = 163.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
script = SubResource( 5 )

[node name="Button" type="Button" parent="AcceptDialog/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 167.0
margin_right = 187.0
margin_bottom = 150.0
text = "\\/"

[node name="Label2" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 200.0
margin_bottom = 218.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "name"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 200.0
margin_bottom = 262.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label3" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 200.0
margin_bottom = 296.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "REQUIREMENTS"
align = 1
valign = 1

[node name="LineEdit2" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 200.0
margin_bottom = 340.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label4" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 200.0
margin_bottom = 374.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "ABILITY"
align = 1
valign = 1

[node name="LineEdit3" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 200.0
margin_bottom = 418.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label5" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 422.0
margin_right = 200.0
margin_bottom = 452.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "COST"
align = 1
valign = 1

[node name="LineEdit4" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 456.0
margin_right = 200.0
margin_bottom = 496.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label6" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 200.0
margin_bottom = 530.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "MIN_LEVEL"
align = 1
valign = 1

[node name="LineEdit5" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 534.0
margin_right = 200.0
margin_bottom = 574.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="AcceptDialog2" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -53.0
margin_right = 147.5
margin_bottom = 53.0
theme = ExtResource( 3 )
window_title = "Remove Abiliity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -51.0
margin_right = 139.5
margin_bottom = 19.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="AcceptDialog2/VBoxContainer"]
margin_right = 279.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "INDEX"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog2/VBoxContainer"]
margin_top = 34.0
margin_right = 279.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="AcceptDialog3" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = -69.0
margin_right = 157.5
margin_bottom = 69.0
theme = ExtResource( 3 )
window_title = "Edit Abiliity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.5
margin_top = -61.0
margin_right = 149.5
margin_bottom = 29.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="AcceptDialog3/VBoxContainer"]
margin_right = 299.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "INDEX"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog3/VBoxContainer"]
margin_top = 34.0
margin_right = 299.0
margin_bottom = 74.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="AcceptDialog4" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -233.5
margin_right = 108.0
margin_bottom = 233.5
theme = ExtResource( 3 )
window_title = "Edit Abiliity"
script = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="AcceptDialog4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -225.5
margin_right = 100.0
margin_bottom = 193.5
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog4/ScrollContainer"]
margin_right = 200.0
margin_bottom = 386.0
alignment = 1

[node name="Label" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "name"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 74.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label2" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 108.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "REQUIREMENTS"
align = 1
valign = 1

[node name="LineEdit2" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 200.0
margin_bottom = 152.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label3" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 200.0
margin_bottom = 186.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "ABILITY"
align = 1
valign = 1

[node name="LineEdit3" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 200.0
margin_bottom = 230.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label4" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 200.0
margin_bottom = 264.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "COST"
align = 1
valign = 1

[node name="LineEdit4" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 200.0
margin_bottom = 308.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label5" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 200.0
margin_bottom = 342.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "MIN_LEVEL"
align = 1
valign = 1

[node name="LineEdit5" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 200.0
margin_bottom = 386.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="ErrorPopup" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = -47.0
margin_right = 78.5
margin_bottom = 47.0
theme = ExtResource( 3 )
window_title = "Error"
dialog_text = "Error"

[node name="AcceptDialog6" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -53.0
margin_right = 147.5
margin_bottom = 65.0
theme = ExtResource( 3 )
window_title = "Use Abiliity"
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -51.0
margin_right = 139.5
margin_bottom = 19.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="AcceptDialog6/VBoxContainer"]
margin_right = 279.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "INDEX"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog6/VBoxContainer"]
margin_top = 34.0
margin_right = 279.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="AcceptDialog5" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -175.0
margin_right = 275.0
margin_bottom = 175.0
window_title = "Select a icon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AcceptDialog5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -56.0
rect_min_size = Vector2( 0, 50 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="AcceptDialog5/ScrollContainer"]
columns = 11

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.942
anchor_right = 1.0
anchor_bottom = 0.098
margin_left = 0.391968
margin_bottom = 0.199997
hint_tooltip = "Voltar para o menu

Atalho: Esc"
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="VBoxContainer/Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="VBoxContainer/Button5" to="." method="_on_Button5_button_down"]
[connection signal="button_down" from="VBoxContainer/Button4" to="." method="_on_Button4_button_down"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="button_down" from="AcceptDialog/ScrollContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Add_icon_Button_button_down"]
[connection signal="confirmed" from="AcceptDialog2" to="." method="_on_AcceptDialog2_confirmed"]
[connection signal="confirmed" from="AcceptDialog3" to="." method="_on_AcceptDialog3_confirmed"]
[connection signal="confirmed" from="AcceptDialog4" to="." method="_on_AcceptDialog4_confirmed"]
[connection signal="confirmed" from="AcceptDialog6" to="." method="_on_AcceptDialog6_confirmed"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
